syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "PixKeyManagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup;

import "google/protobuf/timestamp.proto";

service PixKeyRegistrationGrpcService {
  rpc registerKey (PixKeyRequest) returns (PixKeyResponse) {}
}

service PixKeyRemovalGrpcService {
  rpc removeKey (PixKeyRemovalRequest) returns (PixKeyRemovalResponse) {}
}

service PixKeyConsultationService {
  rpc getPixKeyDetail(PixKeyConsultationRequest) returns (PixKeyConsultationResponse) {}
}

service PixKeyListConsultationService {
  rpc getPixKeyList(PixKeyListRequest) returns (PixKeyListResponse) {}
}

enum KeyType {
  UNKNOWN_KEY_TYPE = 0;
  CPF = 1;
  PHONE = 2;
  EMAIL = 3;
  RANDOM = 4;
}

enum AccountType {
  UNKNOWN_ACCOUNT = 0;
  CURRENT_ACCOUNT = 1;
  SAVINGS_ACCOUNT = 2;
}

message PixKeyRequest {
  string customerId = 1;
  KeyType keyType = 2;
  string key = 3;
  AccountType accountType = 4;
}

message PixKeyResponse {
  string pixId = 1;
}

message PixKeyRemovalRequest {
  string pixId = 1;
  string customerId = 2;
}

message PixKeyRemovalResponse {
  string message = 1;
}

message PixKeyConsultationRequest {
  message PixKeyId {
    string pixId = 1;
    string customerId = 2;
  }
  oneof filter {
    PixKeyId pixId = 1;
    string key = 2;
  }
}

message PixKeyConsultationResponse {
  message PixKeyDetails {

    message Account {
      AccountType accountType = 1;
      string institution = 2;
      string ownerName = 3;
      string ownerCpf = 4;
      string branch = 5;
      string accountNumber = 6;
    }

    KeyType keyType = 1;
    string key = 2;
    Account account = 3;
  }
  string pixId = 1;
  string customerId = 2;
  PixKeyDetails key = 3;
}

message PixKeyListRequest {
  string customerId = 1;
}

message PixKeyListResponse {

  message PixKey {
    string pixId = 1;
    KeyType type = 2;
    string key = 3;
    AccountType accountType = 4;
  }

  string customerId = 1;
  repeated PixKey keys = 2;
}